syntax = "proto3";
import "models.proto";

//package apiary.v1;

message GetEntriesRequest {
    string keyspace = 1;
    repeated string  keys     = 2;
}

message SetEntriesRequest {
    string keyspace = 1;
    repeated Entry entries  = 2;
}

message DeleteEntriesRequest {
    string keyspace = 1;
    repeated string  keys     = 2;
}

message ClearEntriesRequest {
    string keyspace = 1;
}
